syntax = "proto2";
package basic_study;

option go_package = "github.com/yincongcyincong/BasicStudy/proto/api";


message doLoginReq {
  optional string username = 1;
  optional string password = 2;
}
